infrastructure/modules/aws/security/waf.tf
# resource "aws_wafv2_web_acl" "cloudfront-waf" {
#   name   = "luxe-cloudfront-waf"
#   scope  = "CLOUDFRONT"
#   region = var.region

#   default_action {
#     allow {}
#   }

#   rule {
#     name     = "AWSManagedCommonRuleSet"
#     priority = 1

#     override_action {
#       none {}
#     }

#     statement {
#       managed_rule_group_statement {
#         name        = "AWSManagedRulesCommonRuleSet"
#         vendor_name = "AWS"
#       }
#     }

#     visibility_config {
#       cloudwatch_metrics_enabled = true
#       metric_name                = "cloudfront-common"
#       sampled_requests_enabled   = true
#     }
#   }


#   visibility_config {
#     cloudwatch_metrics_enabled = true
#     metric_name                = "luxe-cloudfront-waf"
#     sampled_requests_enabled   = true
#   }

#   tags = {
#     Name = "${var.project_name}-cloudfront-waf"
#   }
# }


# resource "aws_wafv2_web_acl" "alb-waf" {
#   name  = "luxe-alb-waf"
#   scope = "REGIONAL"

#   default_action {
#     allow {}
#   }

#   rule {
#     name     = "AWSManagedCommonRuleSet"
#     priority = 1

#     override_action {
#       none {}
#     }

#     statement {
#       managed_rule_group_statement {
#         name        = "AWSManagedRulesCommonRuleSet"
#         vendor_name = "AWS"
#       }
#     }

#     visibility_config {
#       cloudwatch_metrics_enabled = true
#       metric_name                = "alb-common"
#       sampled_requests_enabled   = true
#     }
#   }

#   rule {
#     name     = "AWSManagedKnownBadInputsRuleSet"
#     priority = 2

#     override_action {
#       none {}
#     }

#     statement {
#       managed_rule_group_statement {
#         name        = "AWSManagedRulesKnownBadInputsRuleSet"
#         vendor_name = "AWS"
#       }
#     }

#     visibility_config {
#       cloudwatch_metrics_enabled = true
#       metric_name                = "alb-bad-inputs"
#       sampled_requests_enabled   = true
#     }
#   }

#   rule {
#     name     = "RateLimitPerIP"
#     priority = 3

#     action {
#       block {}
#     }

#     statement {
#       rate_based_statement {
#         limit              = 1000
#         aggregate_key_type = "IP"
#       }
#     }

#     visibility_config {
#       cloudwatch_metrics_enabled = true
#       metric_name                = "rate_limit"
#       sampled_requests_enabled   = true
#     }
#   }

#   visibility_config {
#     cloudwatch_metrics_enabled = true
#     metric_name                = "luxe-alb-waf"
#     sampled_requests_enabled   = true
#   }

#   tags = {
#     Name = "${var.project_name}-alb-waf"
#   }
# }

# resource "aws_wafv2_web_acl_association" "alb" {
#   resource_arn = var.alb_arn
#   web_acl_arn  = aws_wafv2_web_acl.alb-waf.arn
# }
